--- a/ms08067.md
+++ b/ms08067.md
@@ -14,3 +14,56 @@ The Server service in Microsoft Windows 2000 SP4, XP SP2 and SP3, Server 2003 SP
 
 
 
+
+
+
+
+
+
+
+
+
+
+## References
+
+BUGTRAQ:20081026 Windows RPC MS08-067 FAQ document released
+
+* [URL:http://www.securityfocus.com/archive/1/archive/1/497808/100/0/threaded](http://www.securityfocus.com/archive/1/archive/1/497808/100/0/threaded)
+* BUGTRAQ:20081027 Windows RPC MS08-067 FAQ document updated
+* [URL:http://www.securityfocus.com/archive/1/archive/1/497816/100/0/threaded](http://www.securityfocus.com/archive/1/archive/1/497816/100/0/threaded)
+* EXPLOIT-DB:6824
+* [URL:https://www.exploit-db.com/exploits/6824](https://www.exploit-db.com/exploits/6824)
+* EXPLOIT-DB:6841
+* [URL:https://www.exploit-db.com/exploits/6841](https://www.exploit-db.com/exploits/6841)
+* EXPLOIT-DB:7104
+* [URL:https://www.exploit-db.com/exploits/7104](https://www.exploit-db.com/exploits/7104)
+* EXPLOIT-DB:7132
+* [URL:https://www.exploit-db.com/exploits/7132](https://www.exploit-db.com/exploits/7132)
+* [MISC:http://blogs.securiteam.com/index.php/archives/1150](http://blogs.securiteam.com/index.php/archives/1150)
+* HP:HPSBST02386
+* [URL:http://marc.info/?l=bugtraq&m=122703006921213&w=2](http://marc.info/?l=bugtraq&m=122703006921213&w=2)
+* HP:SSRT080164
+* [URL:http://marc.info/?l=bugtraq&m=122703006921213&w=2](http://marc.info/?l=bugtraq&m=122703006921213&w=2)
+* MS:MS08-067
+* [URL:http://www.microsoft.com/technet/security/Bulletin/ms08-067.mspx](http://www.microsoft.com/technet/security/Bulletin/ms08-067.mspx)
+* CERT:TA08-297A
+* [URL:http://www.us-cert.gov/cas/techalerts/TA08-297A.html](http://www.us-cert.gov/cas/techalerts/TA08-297A.html)
+* CERT:TA09-088A
+* [URL:http://www.us-cert.gov/cas/techalerts/TA09-088A.html](http://www.us-cert.gov/cas/techalerts/TA09-088A.html)
+* CERT-VN:VU\#827267
+* [URL:http://www.kb.cert.org/vuls/id/827267](http://www.kb.cert.org/vuls/id/827267)
+* BID:31874
+* [URL:http://www.securityfocus.com/bid/31874](http://www.securityfocus.com/bid/31874)
+* OVAL:oval:org.mitre.oval:def:6093
+* [URL:https://oval.cisecurity.org/repository/search/definition/oval%3Aorg.mitre.oval%3Adef%3A6093](https://oval.cisecurity.org/repository/search/definition/oval%3Aorg.mitre.oval%3Adef%3A6093)
+* SECTRACK:1021091
+* [URL:http://www.securitytracker.com/id?1021091](http://www.securitytracker.com/id?1021091)
+* VUPEN:ADV-2008-2902
+* [URL:http://www.vupen.com/english/advisories/2008/2902](http://www.vupen.com/english/advisories/2008/2902)
+* SECUNIA:32326
+* [URL:http://secunia.com/advisories/32326](http://secunia.com/advisories/32326)
+* XF:win-server-rpc-code-execution\(46040\)
+* [URL:https://exchange.xforce.ibmcloud.com/vulnerabilities/46040](https://exchange.xforce.ibmcloud.com/vulnerabilities/46040)
+
+
+
